--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>This is the first edit</h1>
     <h2>This is the second edit</h2>
+    <p>This is the change made in main branch</p>
 </body>
 
 </html>
